# mas-index

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
docs/: user-guide.md
src/mas_index/: asker.py  chunker.py  cli.py  config.py  converter.py  indexer.py  models.py  tracker.py
