[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mas-index"
version = "0.1.0"
description = "Batch DOCX-to-Markdown conversion and Elasticsearch indexing pipeline"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.14",
    "elasticsearch>=8.17,<9",
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "google-generativeai>=0.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]
semantic = ["sentence-transformers>=3.0"]

[project.scripts]
mas-index = "mas_index.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
